unpackaged/objects/Talent__c.object
<CustomObject>
    <fields>
        <fullName>Developer__c</fullName>
        <label>Developer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sales force</fullName>
                </value>
                <value>
                    <fullName>Java</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Feedback__c</fullName>
        <label>Feedback</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>None__c</fullName>
        <label>None</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SelectOption__c</fullName>
        <label>SelectOption</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Tester__c</fullName>
        <label>Testing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Manual</fullName>
                </value>
                <value>
                    <fullName>Automation</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>application__c</fullName>
        <label>application</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Connect</fullName>
                </value>
                <value>
                    <fullName>ic</fullName>
                    <isActive>false</isActive>
                    <label>ic</label>
                </value>
                <value>
                    <fullName>rf</fullName>
                    <isActive>false</isActive>
                    <label>rf</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>selected_type__c</fullName>
        <label>selected type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sr_feature__c</fullName>
        <label>sr feature</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>application__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Communities</fullName>
                </value>
                <value>
                    <fullName>Educational Materials &amp; Reports</fullName>
                </value>
                <value>
                    <fullName>User Accounts</fullName>
                </value>
                <value>
                    <fullName>Support</fullName>
                </value>
                <value>
                    <fullName>role</fullName>
                    <isActive>false</isActive>
                    <label>role</label>
                </value>
                <value>
                    <fullName>role 1</fullName>
                    <isActive>false</isActive>
                    <label>role 1</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sr_type__c</fullName>
        <label>sr type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>sr_feature__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>• Archive a community</fullName>
                </value>
                <value>
                    <fullName>• Create a community</fullName>
                </value>
                <value>
                    <fullName>Create/configure data report</fullName>
                </value>
                <value>
                    <fullName>• Educate users, update materials</fullName>
                </value>
                <value>
                    <fullName>• Create/configure user accounts</fullName>
                </value>
                <value>
                    <fullName>• Deactivate user accounts</fullName>
                </value>
                <value>
                    <fullName>• Upload/configure content</fullName>
                </value>
                <value>
                    <fullName>• Configure system settings</fullName>
                </value>
                <value>
                    <fullName>• Research</fullName>
                </value>
                <value>
                    <fullName>• Troubleshoot</fullName>
                </value>
                <value>
                    <fullName>test 1</fullName>
                    <isActive>false</isActive>
                    <label>test 1</label>
                </value>
                <value>
                    <fullName>test 2</fullName>
                    <isActive>false</isActive>
                    <label>test 2</label>
                </value>
                <value>
                    <fullName>test 3</fullName>
                    <isActive>false</isActive>
                    <label>test 3</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vendor__c</fullName>
        <label>vendor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tek</fullName>
                </value>
                <value>
                    <fullName>Aerotek</fullName>
                </value>
                <value>
                    <fullName>Allegis</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Talent</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Talent Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Talents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>